# DiscImageCreator

./: .gitignore  DiscImageCreator.sln  DiscImageCreator_linux.sln  LICENSE  README.md  appveyor.yml  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: manual_build.yml
DiscImageCreator/: DiscImageCreator.cpp  DiscImageCreator.vcxproj  DiscImageCreator.vcxproj.filters  DiscImageCreator_linux.vcxproj  DiscImageCreator_linux.vcxproj.filters  buildDateTime.h.in  calcHash.cpp  calcHash.h  check.cpp  check.h  convert.cpp  convert.h  createBuildDateTime.bat  enum.h  execIoctl.cpp  execIoctl.h  execScsiCmd.cpp  execScsiCmd.h  execScsiCmdforCD.cpp  execScsiCmdforCD.h  execScsiCmdforCDCheck.cpp  execScsiCmdforCDCheck.h  execScsiCmdforDVD.cpp  execScsiCmdforDVD.h  execScsiCmdforFileSystem.cpp  execScsiCmdforFileSystem.h  execTapeCmd.cpp  execTapeCmd.h  fix.cpp  fix.h  forwardDeclaration.h  get.cpp  get.h  init.cpp  init.h  makefile  output.cpp  output.h  outputFileSystem.cpp  outputFileSystem.h  (+15 more)
DiscImageCreator/_external/: CheckSector.h  ECCEDC.cpp  NonStandardFunction.cpp  NonStandardFunction.h  abgx360.c  abgx360.cpp  abgx360.h  aes.cpp  crc16ccitt.c  crc16ccitt.cpp  crc16ccitt.h  crc32.cpp  crc32.h  crc32ecma267.cpp  crc32ecma267.h  crc6itu.cpp  crc6itu.h  global.h  md5.h  md5c.cpp  prngcd.cpp  prngcd.h  reedSolomonGF64.cpp  sha-private.h  sha.h  sha1.cpp  sha1.h  sha224-256.cpp  sha384-512.cpp
DiscImageCreator/_linux/: defineForLinux.cpp  defineForLinux.h  ntddcdrm.h  ntddmmc.h  scsi.h
Doc/: ChangeLog.txt  ChengeLog.txt  Firmware&Tool.md  KnownIssue.txt  ReadMe.txt  Reference.md  TestedDrive.txt  Todo.txt
Release_ANSI/: C2ErrorProtect.txt  DVDRawBruteforce - Drive Sheet - Sheet1.tsv  E_WISE.INI  EdcEccErrorProtect.txt  ReadErrorProtect.txt  driveOffset.txt
Release_ANSI/Doc/: ChangeLog.txt  Firmware&Tool.md  KnownIssue.txt  Reference.md  Todo.txt
